# ggsql-duckdb

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  community-extension.yml  extension_config.cmake
.cache/clangd/: compile_commands.json
.cache/clangd/release/: compile_commands.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: MainDistributionPipeline.yml  community-extensions-pr.yml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/assets/: README.md  app.html
rust/include/: ggsql_ext_rs.h
rust/src/: dialect.rs  ffi.rs  lib.rs  reader.rs  server.rs
src/: ggsql_bridge.cpp  ggsql_exec.cpp  ggsql_extension.cpp  ggsql_parser.cpp
src/include/: ggsql_bridge.hpp  ggsql_exec.hpp  ggsql_extension.hpp  ggsql_parser.hpp
test/sql/: ggsql.test
