[package]
name = "ggsql_ext_rs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
# ggsql: default features disabled to avoid pulling duckdb-rs (bundled = second DuckDB
# linked into our extension = binary bloat and symbol clashes). Dialect is inlined in
# dialect.rs so we don't need the `duckdb` feature.
ggsql = { version = "0.3.1", default-features = false, features = ["vegalite", "ipc"] }

# Arrow: ffi for consuming DuckDB's ArrowArrayStream. `arrow::compute::concat_batches`
# is always compiled — no feature flag needed.
arrow = { version = "56", default-features = false, features = ["ffi"] }

serde_json = "1"
tiny_http = "0.12"
open = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
